ISSUE-136 Translate done.html

--- a/travelers_project/feedback/templates/feedback/done.html
+++ b/travelers_project/feedback/templates/feedback/done.html
@@ -3,10 +3,10 @@
 
 {% block title %}
     Contacts
-{% endblock %}
+{% endblock title %}
 
 {% block content %}
     <div class="container">
       <h1>Well done!!</h1>
     </div>
-{% endblock %}
+{% endblock content %}
