ISSUE-136 Translate city_detail.html

--- a/travelers_project/geography/templates/geography/city_detail.html
+++ b/travelers_project/geography/templates/geography/city_detail.html
@@ -15,7 +15,7 @@
         <div class="col-md-5 tag">
             <div class="social-in">
                 <div class="col-md-4 date">
-                    <p>Date add<span>{{ city_detail.add_date|date:"d m Y" }}</span></p>
+                    <p>Дата добавления<span>{{ city_detail.add_date|date:"d m Y" }}</span></p>
                 </div>
                 <div class="col-md-4 date">
                     <p>Регион
