ISSUE-136 Translate base.html

--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Trudge a Travel Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
+    <title>Карта путешествий по городам и регионам | Andersen </title>
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all"/>
     <link href="{% static 'css/bootstrap.css.map' %}" rel="stylesheet" type="text/css" media="all"/>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" media="all"/>
@@ -130,37 +130,35 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <div class="footer-top">
             <div class="col-md-3 amet-sed">
-                <h4>Location</h4>
-                <p>1401 South Grand Avenue</p>
-                <p>Los Angeles, CA 90015 </p>
+                <h4>Местоположение</h4>
+                <p>Россия</p>
+                <p>Санкт-Петербург </p>
                 <p>(213) 748-2411</p>
-                <a href="#">see it in the map<i> </i></a>
+                <a href="#">Посмотреть на карте<i> </i></a>
             </div>
             <div class="col-md-3 amet-sed ">
-                <h4>Company</h4>
+                <h4>Компания</h4>
 
                 <ul class="nav-bottom">
-                    <li><a href="story.html">Our story</a></li>
-                    <li><a href="#">Mission</a></li>
-                    <li><a href="404.html">Journal </a></li>
-                    <li><a href="#">Careers </a></li>
+                    <li><a href="story.html">Наша история</a></li>
+                    <li><a href="#">Миссия</a></li>
+                    <li><a href="404.html">Журнал </a></li>
+                    <li><a href="#">Карьера </a></li>
                 </ul>
             </div>
             <div class="col-md-3 amet-sed ">
-                <h4>Support</h4>
+                <h4>Поддержка</h4>
                 <ul class="nav-bottom">
                     <li><a href="#">FAQ</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                    <li><a href="#">Policies</a></li>
+                    <li><a href="contact.html">Наши контакты</a></li>
+                    <li><a href="#">Политики</a></li>
 
                 </ul>
             </div>
             <div class="col-md-3 amet-sed ">
-                <h4>Trudge</h4>
-                <p>Sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua.</p>
-                <p class="footer-class">Copyright © 2015 Trudge Design by <a href="http://w3layouts.com/"
-                                                                             target="_blank">W3layouts</a></p>
+                <h4>Путешествия</h4>
+                <p>"Путешествовать необходимо тем, кто учится", - Марк Твен </p>
+                <p class="footer-class">Copyright © 2019</p>
             </div>
             <div class="clearfix"></div>
         </div>
