--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -65,6 +65,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li><a href="{% url 'routes-sights-list-url' %}">По достопримечательностям</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle"
+                       data-toggle="dropdown"
+                       role="button"
+                       aria-expanded="false">Лаборатория
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="{% url 'top-cities-url' %}">Top городов</a></li>
+                    </ul>
+                </li>
 
                 <li class="nav-item"><a href="{% url 'feedback_url' %}">Контакты</a></li>
             </ul>
