--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -4,7 +4,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Карта путешествий по городам и регионам | Andersen </title>
+    <title>
+      {% block title %}
+        Карта путешествий по городам и регионам | Andersen
+      {% endblock %}
+    </title>
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all"/>
     <link href="{% static 'css/bootstrap.css.map' %}" rel="stylesheet" type="text/css" media="all"/>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" media="all"/>
@@ -73,6 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="{% url 'top-cities-url' %}">Top городов</a></li>
+                        <li><a href="{% url 'top_traces_url' %}">Top маршрутов</a></li>
                     </ul>
                 </li>
 
