ISSUE-149 Change template #1

--- a/travelers_project/laboratory/templates/laboratory/topcities.html
+++ b/travelers_project/laboratory/templates/laboratory/topcities.html
@@ -13,10 +13,10 @@
         </tr>
         {% for region in regions %}
         <tr>
-            <td>{{ region }}</td>
+            <td>{{ region.region }}</td>
             <td>{{ region.city }}</td>
-            <td>{{ region.sight }}</td>
-            <td>{{ region.photo }}</td>
+            <td></td>
+            <td></td>
         </tr>
 
         {% endfor %}
