--- a/travelers_project/laboratory/templates/laboratory/toptraces.html
+++ b/travelers_project/laboratory/templates/laboratory/toptraces.html
@@ -21,17 +21,27 @@
         <th scope="col">Популярная достопримечательнотсь</th>
         <th scope="col">Популярная картинка</th>
       </tr>
-      {% for id, title in traces %}
-      <tr>
-        <td><a href="{% url 'routes-cities-detail-url' pk=id %}">{{ title }}</a></td>
-        <td><ul><li>Города</li></ul></td>
-        <td><ul><li>Достоапремечательность</li></ul></td>
-        <td>
-          <a href="https://st2.depositphotos.com/2001755/5408/i/450/depositphotos_54081723-stock-photo-beautiful-nature-landscape.jpg" data-lightbox="image-1" data-title="Заголовок картинки">
-            <img width="150" src="https://st2.depositphotos.com/2001755/5408/i/450/depositphotos_54081723-stock-photo-beautiful-nature-landscape.jpg" alt="">
-          </a>
-        </td>
-      </tr>
+      {% for route, cities in routes.items %}
+        <tr>
+          <td><a href="{% url 'routes-cities-detail-url' pk=route.0 %}">{{ route.1 }}</a></td>
+          <td>
+            <ul>
+              {% for id, city in cities %}
+                <li><a href="{% url 'city_detail_url' pk=id %}">{{ city }}</a></li>
+              {% endfor %}
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Достоапремечательность</a></li>
+            </ul>
+          </td>
+          <td>
+            <a href="https://st2.depositphotos.com/2001755/5408/i/450/depositphotos_54081723-stock-photo-beautiful-nature-landscape.jpg" data-lightbox="image-1" data-title="Заголовок картинки">
+              <img width="150" src="https://st2.depositphotos.com/2001755/5408/i/450/depositphotos_54081723-stock-photo-beautiful-nature-landscape.jpg" alt="">
+            </a>
+          </td>
+        </tr>
       {% endfor %}
     </tbody>
   </table>
