--- a/travelers_project/laboratory/templates/laboratory/topcities.html
+++ b/travelers_project/laboratory/templates/laboratory/topcities.html
@@ -17,6 +17,9 @@
             <td>{{ region.city }}</td>
             <td>{{ region.sight }}</td>
             <td align="center">
+                <a href="{{ region.photo }}">
+                    <img height="80" src="{{ region.photo }}">
+                </a>
             </td>
         </tr>
 
