--- a/travelers_project/geography/templates/geography/sight_list.html
+++ b/travelers_project/geography/templates/geography/sight_list.html
@@ -11,7 +11,7 @@
         </center>
         {% for sight in sight_list %}
 
-        <div class="col-md-3 story-popular">
+        <div class="col-md-4 story-popular">
             <div class="feature text-center">
                 {% thumbnail sight.image "x150" crop="center" as im %}
                 <a href="{{ sight.image.url }}">
@@ -28,11 +28,11 @@
             </div>
             <div class="feature text-left">
                 <a href="{% url 'sight_detail_url' pk=sight.pk %}">
-                    <h6>{{ sight.title }}</h6>
+                    <h4>{{ sight.title | truncatechars:30 }}</h4>
                 </a>
                 <p>
                     {% if sight.text %}
-                    {{ sight.text | truncatechars:50 }}
+                    {{ sight.text | truncatechars:30 }}
                     {% else %}
                     {% lorem 4 w random %}
                     {% endif %}
