ISSUE-178 Edit base template

--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -7,7 +7,7 @@
     <title>
       {% block title %}
         Карта путешествий по городам и регионам | Andersen
-      {% endblock %}
+      {% endblock title %}
     </title>
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all"/>
     <link href="{% static 'css/bootstrap.css.map' %}" rel="stylesheet" type="text/css" media="all"/>
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="Trudge Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"/>
 
     <script src='{% static "js/jquery.min.js" %}' type="text/javascript"></script>
     <script src='{% static "js/bootstrap.js" %}' type="text/javascript"></script>
