ISSUE-178 Edit template: add content

--- a/travelers_project/laboratory/templates/laboratory/topcities.html
+++ b/travelers_project/laboratory/templates/laboratory/topcities.html
@@ -19,7 +19,7 @@
         <tr>
             <th scope="col">Регион</th>
             <th scope="col">Главный Город</th>
-            <th scope="col">Популярная достопримечательнотсь</th>
+            <th scope="col">Популярная достопримечательность</th>
             <th scope="col">Популярная картинка</th>
         </tr>
         {% for region in catalog %}
