--- a/travelers_project/geography/templates/geography/region_detail.html
+++ b/travelers_project/geography/templates/geography/region_detail.html
@@ -8,34 +8,29 @@
         <h1>{{ region_detail.title }}</h1>
     </center>
     {% with cities=object_list %}
-
-    <div class="story">
         {% for city in cities %}
-        <a href="{% url 'city_detail_url' pk=city.pk %}">
-            <div class="col-md-4 story-popular">
-                {% thumbnail city.image "x150" as im %}
-                <img class="img-responsive " src="{{ im.url }}" alt="">
+        <div class="col-md-4 story-popular" style="height:400px;">
+            <a href="{% url 'city_detail_url' pk=city.pk %}">
+                {% thumbnail city.image "x300" as im %}
+                <img src="{{ im.url }}"
+                     style="height:250px;"
+                     alt="">
                 {% empty %}
-                <img class="img-responsive "
-                     src="{% static 'images/not-foto.png' %}"
-                     style="height:150px;"
+                <img src="{% static 'images/not-foto.png' %}"
+                     style="height:250px;"
                      alt="">
                 {% endthumbnail %}
                 <h6>{{ city.title }}</h6>
                 <p>
-                    {% if city.description %}
-                    {{ city.description|truncatewords:14 }}
-                    {% else %}
-                    {% lorem 14 w random %}
-                    {% endif %}
+                    {{ city.description|truncatechars:60 }}
                 </p>
-            </div>
-        </a>
+            </a>
+        </div>
         {% endfor %}
-        <div class="clearfix"></div>
-    </div>
     {% endwith %}
-
+    <div class="clearfix"></div>
     {% include 'geography/includes/paginator.html' %}
+
 </div>
+
 {% endblock %}
