added links to geographic objects

--- a/travelers_project/traces/templates/traces/route_cities_detail.html
+++ b/travelers_project/traces/templates/traces/route_cities_detail.html
@@ -56,13 +56,17 @@
                     {% for city in route_city_detail.cities.all %}
                         <div class="col-md-4 date">
                             <p>
-                                <span>{{ city.title }}</span>
+                                <a href="{% url 'city_detail_url' pk=city.pk %}">
+                                    <span>{{ city.title }}</span>
+                                </a>
                             </p>
                         </div>
 
                         <div class="col-md-4 date">
                             <p>
-                                <span>{{ city.region.title }}</span>
+                                <a href="{% url 'region_detail_url' pk=city.region.pk %}">
+                                    <span>{{ city.region.title }}</span>
+                                </a>
                             </p>
                         </div>
 
@@ -71,7 +75,7 @@
                             <p>
                                 {% for sight in city.sight.all %}
                                     <span>
-                                        <a href="#">{{ sight.title }} </a>
+                                        <a href="{% url 'sight_detail_url' pk=city.sight.pk %}">{{ sight.title }} </a>
                                     </span>
                                 {% endfor%}
                             </p>
