fixed link error in geographic obj

--- a/travelers_project/traces/templates/traces/route_cities_detail.html
+++ b/travelers_project/traces/templates/traces/route_cities_detail.html
@@ -75,7 +75,7 @@
                             <p>
                                 {% for sight in city.sight.all %}
                                     <span>
-                                        <a href="{% url 'sight_detail_url' pk=city.sight.pk %}">{{ sight.title }} </a>
+                                        <a href="{% url 'sight_detail_url' pk=sight.pk %}">{{ sight.title }} </a>
                                     </span>
                                 {% endfor%}
                             </p>
