--- a/travelers_project/traces/templates/traces/route_cities_detail.html
+++ b/travelers_project/traces/templates/traces/route_cities_detail.html
@@ -85,11 +85,20 @@
                         <br>
                     {% endfor %}
                 </div>
-                <p class="tag-in">{{ route_city_detail.description }}</p>
+<!--                <p class="tag-in">{{ route_city_detail.description }}</p>-->
 
             </div>
 
             <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="single">
+        <div class="single-middle">
+            <div class="col-md-12>
+                <p class="tag-in">{{ route_city_detail.description }}</p>
+            </div>
         </div>
     </div>
 </div>
