added page with sights grouped by city

--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -57,7 +57,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <ul>
                 <li class="nav-item active"><a href="{% url 'region_list_url' %}">Регионы</a></li>
                 <li class="nav-item"><a href="{% url 'city_list_url' %}">Города</a></li>
-                <li class="nav-item"><a href="{% url 'sight_list_url' %}">Достопримечательности</a></li>
+                <li class="nav-item"><a href="{% url 'sight_list_with_cities_url' %}">Достопримечательности</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle"
                        data-toggle="dropdown"
